--- a/view/css/frequency.css
+++ b/view/css/frequency.css
@@ -138,7 +138,11 @@ section .top1 input {
   height: 30px;
   width: 65px;
   color: #ffffff;
-  background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+  background: -ms-linear-gradient(-180deg, #1ea0e3, #32b5ee, #35bcf0);
+  background: -moz-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0);
+  background: -o-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0);
+  background: -webkit-gradient(linear, 100% 100%, 0% 0%, from(#1ea0e3), to(#35bcf0));
+  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#1ea0e3', endColorStr='#35bcf0', gradientType='0');
   border: none;
   margin-left: 30px;
   outline: none;
@@ -192,7 +196,11 @@ section .top1 .status-r .status span:after {
   border-radius: 3px;
 }
 section .top1 .status-r .status span:first-of-type:after {
-  background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+  background: -ms-linear-gradient(-180deg, #1ea0e3, #32b5ee, #35bcf0);
+  background: -moz-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0);
+  background: -o-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0);
+  background: -webkit-gradient(linear, 100% 100%, 0% 0%, from(#1ea0e3), to(#35bcf0));
+  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#1ea0e3', endColorStr='#35bcf0', gradientType='0');
 }
 section .top1 .status-r .status span:nth-of-type(2):after {
   background: -webkit-linear-gradient(90deg, #f79727, #f8a543, #fab059);
