--- a/css/index.css
+++ b/css/index.css
@@ -161,10 +161,11 @@ body {
 header {
   width: 100%;
   height: 80px;
-  background:#1ea0e3;
-  background: -moz-linear-gradient(top, #1ea0e3, #32b5ee, #35bcf0); 
-  background: -o-linear-gradient(top,#1ea0e3, #32b5ee, #35bcf0); 
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#1ea0e3), to(#35bcf0));
+  background: -ms-linear-gradient(-180deg, #1ea0e3, #32b5ee, #35bcf0);
+  background: -moz-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0);
+  background: -o-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0);
+  background: -webkit-gradient(linear, 100% 100%, 0% 0%, from(#1ea0e3), to(#35bcf0));
+  filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#1ea0e3', endColorStr='#35bcf0', gradientType='0');
   position: relative;
   z-index: 200;
   box-shadow: 0px 3px 10px rgba(102, 102, 102, 0.3);
