--- a/view/css/frequency.less
+++ b/view/css/frequency.less
@@ -70,7 +70,11 @@ section {
       height: 30px;
       width: 65px;
       color: #ffffff;
-      background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+      background: -ms-linear-gradient(-180deg,#1ea0e3,#32b5ee,#35bcf0);
+      background: -moz-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0); 
+      background: -o-linear-gradient(left,#1ea0e3, #32b5ee, #35bcf0); 
+      background: -webkit-gradient(linear, 100% 100%, 0% 0%, from(#1ea0e3), to(#35bcf0));
+      filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#1ea0e3',endColorStr='#35bcf0',gradientType='0');   
       border: none;
       margin-left: 30px;
       outline: none;
@@ -122,12 +126,11 @@ section {
           }
           &:first-of-type {
             &:after {
-              background: -webkit-linear-gradient(
-                90deg,
-                #1ea0e3,
-                #32b5ee,
-                #35bcf0
-              );
+              background: -ms-linear-gradient(-180deg,#1ea0e3,#32b5ee,#35bcf0);
+              background: -moz-linear-gradient(left, #1ea0e3, #32b5ee, #35bcf0); 
+              background: -o-linear-gradient(left,#1ea0e3, #32b5ee, #35bcf0); 
+              background: -webkit-gradient(linear, 100% 100%, 0% 0%, from(#1ea0e3), to(#35bcf0));
+              filter: progid:DXImageTransform.Microsoft.Gradient(startColorStr='#1ea0e3',endColorStr='#35bcf0',gradientType='0');   
             }
           }
           &:nth-of-type(2) {
