--- a/view/css/operationReport.css
+++ b/view/css/operationReport.css
@@ -124,13 +124,14 @@ section .top1 select {
   height: 30px;
   margin-left: 5px;
   float: left;
+  border: solid 1px #d7d7d7;
 }
 section .top1 select.alleqi {
   float: right;
 }
 section .top1 input {
   height: 30px;
-  width: 65px;
+  width: 100px;
   color: #ffffff;
   background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
   border: none;
@@ -138,24 +139,16 @@ section .top1 input {
   outline: none;
   float: left;
 }
-section .top2 {
-  margin-top: 30px;
-  overflow: hidden;
-}
-section .top2 input {
-  border: 1px solid #d7d7d7;
+section .top1 input.sbname {
+  color: #666666;
   background: none;
-  width: 65px;
-  height: 30px;
-  margin-left: 15px;
-  float: left;
+  border: solid 1px #d7d7d7;
 }
-section .top2 input:first-of-type {
-  margin-left: 0;
-}
-section .top2 input:hover {
-  color: #19a8fb;
-  border: solid 1px #19a8fb;
+section .top1 input.exportExcel {
+  float: right;
+  background: none;
+  color: #666666;
+  border: solid 1px #d7d7d7;
 }
 section .tables {
   width: 100%;
@@ -255,121 +248,4 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a {
 section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
   background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
   color: #ffffff;
-}
-.tan-wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1111;
-  display: none;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-}
-.tan-wrap .basic-mod {
-  display: none;
-  position: absolute;
-  width: 500px;
-  height: 688px;
-  left: 50%;
-  top: 50%;
-  margin-left: -250px;
-  margin-top: -344px;
-  z-index: 11112;
-  background-color: #ffffff;
-  border-radius: 5px;
-  overflow: hidden;
-}
-.tan-wrap .basic-mod .basic-mod-top {
-  padding: 30px;
-}
-.tan-wrap .basic-mod .basic-mod-top p {
-  font-size: 14px;
-  color: #666666;
-  padding: 15px 0 15px 0px;
-}
-.tan-wrap .basic-mod .basic-mod-top p.basic-mod-title {
-  font-size: 18px;
-  color: #333333;
-  text-align: left;
-  border-bottom: solid 1px #eeeeee;
-  padding: 0 0 30px 0;
-}
-.tan-wrap .basic-mod .basic-mod-top select {
-  width: 100%;
-  height: 35px;
-  padding-left: 12px;
-  border: solid 1px #d7d7d7;
-}
-.tan-wrap .basic-mod .basic-mod-top input {
-  width: 100%;
-  height: 35px;
-  padding-left: 12px;
-}
-.tan-wrap .basic-mod .basic_mod_bottom {
-  overflow: hidden;
-  margin-top: 25px;
-  border-top: 1px solid #eeeeee;
-}
-.tan-wrap .basic-mod .basic_mod_bottom input {
-  float: left;
-  width: 50%;
-  border: none;
-  background: none;
-  height: 50px;
-  outline: none;
-  border-left: #eeeeee solid 1px;
-}
-.tan-wrap .basic-mod .basic_mod_bottom input:first-of-type {
-  color: #1ea0e3;
-}
-.tan-wrap .basic-add {
-  display: none;
-  position: absolute;
-  width: 960px;
-  height: 522px;
-  left: 50%;
-  top: 50%;
-  margin-left: -480px;
-  margin-top: -261px;
-  z-index: 11112;
-  background-color: #ffffff;
-}
-.tan-wrap .basic-add .basic-add-top {
-  padding: 30px;
-}
-.tan-wrap .basic-add .basic-add-top ul {
-  width: 100%;
-  overflow: hidden;
-}
-.tan-wrap .basic-add .basic-add-top ul li {
-  width: 50%;
-  float: left;
-  margin-top: 20px;
-}
-.tan-wrap .basic-add .basic-add-top ul li select {
-  margin-top: 14px;
-  width: 440px;
-  height: 35px;
-}
-.tan-wrap .basic-add .basic-add-top ul li input {
-  width: 440px;
-  height: 35px;
-  margin-top: 14px;
-}
-.tan-wrap .basic-add .basic-add-bottom {
-  overflow: hidden;
-  margin-top: 25px;
-  border-top: 1px solid #eeeeee;
-}
-.tan-wrap .basic-add .basic-add-bottom input {
-  float: left;
-  width: 50%;
-  border: none;
-  background: none;
-  height: 50px;
-  outline: none;
-  border-left: #eeeeee solid 1px;
-}
-.tan-wrap .basic-add .basic-add-bottom input:first-of-type {
-  color: #1ea0e3;
 }
