--- a/view/operationReport.html
+++ b/view/operationReport.html
@@ -10,92 +10,6 @@
 </head>
 
 <body>
-    <div class="tan-wrap" id="tan_wrap">
-        <div class="basic-mod" id="basic_mod">
-            <div class="basic-mod-top">
-                <p class="basic-mod-title">修改信息</p>
-                <p class="basic-mod-name">项目名称</p>
-                <select name="" id="">
-                    <option value="">潼湖小镇1</option>
-                    <option value="">潼湖小镇2</option>
-                    <option value="">潼湖小镇3</option>
-                    <option value="">潼湖小镇4</option>
-                </select>
-                <p>设备系统：</p>
-                <select name="" id="">
-                    <option value="">水质监测系统1</option>
-                    <option value="">水质监测系统2</option>
-                    <option value="">水质监测系统3</option>
-                    <option value="">水质监测系统4</option>
-                </select>
-                <p>设备名称：</p>
-                <input type="text" name="" id="">
-                <p>设备编码：</p>
-                <input type="text" name="" id="">
-                <p>设备序号：</p>
-                <input type="text" name="" id="">
-                <p>安装位置：</p>
-                <input type="text" name="" id="">
-            </div>
-            <div class="basic_mod_bottom">
-                <input type="button" id="basic_mod_yes" value="确定">
-                <input type="button" id="basic_mod_no" value="取消">
-            </div>
-        </div>
-        <div class="basic-add" id="basic_add">
-            <div class="basic-add-top">
-                <p class="basic-add-title">新增信息</p>
-                <ul>
-                    <li>
-                        <p>项目名称：</p>
-                        <select name="" id="">
-                            <option value="">潼湖小镇</option>
-                            <option value="">潼湖小镇</option>
-                            <option value="">潼湖小镇</option>
-                            <option value="">潼湖小镇</option>
-                        </select>
-                    </li>
-                    <li>
-                        <p>系统设备：</p>
-                        <select name="" id="">
-                            <option value="">水质监测系统</option>
-                            <option value="">水质监测系统</option>
-                            <option value="">水质监测系统</option>
-                            <option value="">水质监测系统</option>
-                        </select>
-                    </li>
-                    <li>
-                        <p>设备名称：</p>
-                        <input type="text">
-                    </li>
-                    <li>
-                        <p>设备编码：</p>
-                        <input type="text">
-                    </li>
-                    <li>
-                        <p>设备序号：</p>
-                        <input type="text">
-                    </li>
-                    <li>
-                        <p>厂商：</p>
-                        <input type="text">
-                    </li>
-                    <li>
-                        <p>安装日期：</p>
-                        <input type="text">
-                    </li>
-                    <li>
-                        <p>使用日期：</p>
-                        <input type="text">
-                    </li>
-                </ul>
-            </div>
-            <div class="basic-add-bottom">
-                <input type="button" id="basic_add_yes" value="确定">
-                <input type="button" id="basic_add_no" value="取消">
-            </div>
-        </div>
-    </div>
     <div class="wrap">
         <header>
             设备运行报表
@@ -103,33 +17,16 @@
         <section>
             <div class="top1">
                 <span>项目名称</span>
-                <select>
-                    <option value="">全部项目</option>
-                    <option value="">潼湖小区</option>
-                    <option value="">创新科技园</option>
+                <select class="projectName">
                 </select>
                 <span>设备系统</span>
-                <select>
-                    <option value="">全部系统</option>
+                <select class="equi">
                 </select>
                 <span>设备名称</span>
-                <select>
-                    <option value="">全部设备</option>
-                    <option value="">水质设备</option>
-                    <option value="">空气设备</option>
-                </select>
-                <input type="button" value="查询">
-                <!-- <select class="alleqi">
-                    <option value="">图表模式</option>
-                    <option value="">地图模式</option>
-                </select> -->
+                <input class="sbname" type="text" placeholder="请输入设备名称">
+                <input id="seach" type="button" value="查询">
+                <input type="button" id="exportExcel" class="exportExcel" value="导出">
             </div>
-            <!-- <div class="top2">
-                <input type="button" value="修改">
-                <input type="button" id="newAdd" value="新增">
-                <input type="button" value="删除">
-                <input type="button" value="导出">
-            </div> -->
             <div class="tables">
                 <ul class="titles">
                     <li>
@@ -143,8 +40,6 @@
                         <span>设备安装位置</span>
                         <span>设备故障次数</span>
                         <span>处理责任人</span>
-                        <!-- <span>使用时间</span> -->
-                        <!-- <span>操作</span> -->
                     </li>
                 </ul>
                 <ul class="tableContent" id="tableContent">
@@ -160,10 +55,6 @@
                         <span>住宅A去</span>
                         <span>0</span>
                         <span>王大大</span>
-                        <!-- <span>
-                            <a class="amend">修改</a>
-                            <a class="delete">删除</a>
-                        </span> -->
                     </li>
                 </ul>
             </div>
