--- a/view/css/weather.less
+++ b/view/css/weather.less
@@ -115,6 +115,9 @@ section {
       float: right;
       width: 22%;
       margin-top: 48px;
+      @media (max-height: 550px) { 
+        width: 24%;
+      } 
       table{
         tr{
           line-height: 2;
