--- a/view/css/water.less
+++ b/view/css/water.less
@@ -114,6 +114,10 @@ section {
   .message {
     float: right;
     margin-top: 48px;
+    width: 22%;
+    @media (max-height: 550px) { 
+      width: 24%;
+    } 
     table{
       tr{
         line-height: 2;
