--- a/view/css/weatherData.less
+++ b/view/css/weatherData.less
@@ -96,12 +96,19 @@ section {
         color: #ffffff;
         border: none;
         background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+        float: right;
       }
+    }
+  }
+  .top2{
+    input{
       &.exportExcel {
         border: 1px solid #d7d7d7;
         background: none;
         width: 65px;
         height: 30px;
+        margin: 20px;
+        margin-right: 0;
         float: right;
       }
     }
