--- a/view/weatherData.html
+++ b/view/weatherData.html
@@ -28,7 +28,10 @@
                 <span class="m10">至</span>
                 <input type="text" class="demo-input date m0" placeholder="请选择日期" id="failuredata2">
                 <input id="seach" class="seach" type="button" value="查询">
-                <input class="exportExcel" type="button" id="exportExcel" value="导出">
+                <!-- <input class="exportExcel" type="button" id="exportExcel" value="导出"> -->
+            </div>
+            <div class="top2">
+                <input class="exportExcel" type="button" id="exportExcel" value="导出">                
             </div>
             <div class="tables">
                 <ul class="titles">
