--- a/view/css/waterData.css
+++ b/view/css/waterData.css
@@ -158,12 +158,15 @@ section .top1 input.seach {
   color: #ffffff;
   border: none;
   background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+  float: right;
 }
-section .top1 input.exportExcel {
+section .top2 input.exportExcel {
   border: 1px solid #d7d7d7;
   background: none;
   width: 65px;
   height: 30px;
+  margin: 20px;
+  margin-right: 0;
   float: right;
 }
 section .tables {
@@ -261,177 +264,4 @@ section .menu-bottom-wrap .menu-bototm .pageIndex a {
 section .menu-bottom-wrap .menu-bototm .pageIndex a:first-of-type {
   background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
   color: #ffffff;
-}
-.tan-wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1111;
-  display: none;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-}
-.tan-wrap .basic-mod {
-  display: none;
-  position: absolute;
-  width: 500px;
-  height: 688px;
-  left: 50%;
-  top: 50%;
-  margin-left: -250px;
-  margin-top: -344px;
-  z-index: 11112;
-  background-color: #ffffff;
-  border-radius: 5px;
-  overflow: hidden;
-}
-.tan-wrap .basic-mod .basic-mod-top {
-  padding: 30px;
-}
-.tan-wrap .basic-mod .basic-mod-top p {
-  font-size: 14px;
-  color: #666666;
-  padding: 15px 0 15px 0px;
-}
-.tan-wrap .basic-mod .basic-mod-top p.basic-mod-title {
-  font-size: 18px;
-  color: #333333;
-  text-align: left;
-  border-bottom: solid 1px #eeeeee;
-  padding: 0 0 30px 0;
-}
-.tan-wrap .basic-mod .basic-mod-top select {
-  width: 100%;
-  height: 35px;
-  padding-left: 12px;
-  border: solid 1px #d7d7d7;
-}
-.tan-wrap .basic-mod .basic-mod-top input {
-  width: 100%;
-  height: 35px;
-  padding-left: 12px;
-}
-.tan-wrap .basic-mod .basic_mod_bottom {
-  overflow: hidden;
-  margin-top: 25px;
-  border-top: 1px solid #eeeeee;
-}
-.tan-wrap .basic-mod .basic_mod_bottom input {
-  float: left;
-  width: 50%;
-  border: none;
-  background: none;
-  height: 50px;
-  outline: none;
-  border-left: #eeeeee solid 1px;
-}
-.tan-wrap .basic-mod .basic_mod_bottom input:first-of-type {
-  color: #1ea0e3;
-}
-.tan-wrap .basic-add {
-  display: none;
-  position: absolute;
-  width: 960px;
-  height: 522px;
-  left: 50%;
-  top: 50%;
-  margin-left: -480px;
-  margin-top: -261px;
-  z-index: 11112;
-  background-color: #ffffff;
-}
-.tan-wrap .basic-add .basic-add-top {
-  padding: 30px;
-}
-.tan-wrap .basic-add .basic-add-top ul {
-  width: 100%;
-  overflow: hidden;
-}
-.tan-wrap .basic-add .basic-add-top ul li {
-  width: 50%;
-  float: left;
-  margin-top: 20px;
-}
-.tan-wrap .basic-add .basic-add-top ul li select {
-  margin-top: 14px;
-  width: 440px;
-  height: 35px;
-}
-.tan-wrap .basic-add .basic-add-top ul li input {
-  width: 440px;
-  height: 35px;
-  margin-top: 14px;
-}
-.tan-wrap .basic-add .basic-add-bottom {
-  overflow: hidden;
-  margin-top: 25px;
-  border-top: 1px solid #eeeeee;
-}
-.tan-wrap .basic-add .basic-add-bottom input {
-  float: left;
-  width: 50%;
-  border: none;
-  background: none;
-  height: 50px;
-  outline: none;
-  border-left: #eeeeee solid 1px;
-}
-.tan-wrap .basic-add .basic-add-bottom input:first-of-type {
-  color: #1ea0e3;
-}
-.tan-wrap .basic-del {
-  display: none;
-  overflow: hidden;
-  box-shadow: 5px 5px 15px rgba(51, 51, 51, 0.2);
-  border-radius: 5px;
-  position: absolute;
-  width: 350px;
-  height: 170px;
-  left: 50%;
-  top: 50%;
-  margin-left: -175px;
-  margin-top: -85px;
-  z-index: 11112;
-  background-color: #ffffff;
-}
-.tan-wrap .basic-del .basic-del-top {
-  text-align: center;
-  padding: 60px;
-  padding-bottom: 0px;
-}
-.tan-wrap .basic-del .basic-del-top ul {
-  width: 100%;
-  overflow: hidden;
-}
-.tan-wrap .basic-del .basic-del-top ul li {
-  width: 50%;
-  float: left;
-  margin-top: 20px;
-}
-.tan-wrap .basic-del .basic-del-top ul li select {
-  margin-top: 14px;
-  width: 440px;
-  height: 35px;
-}
-.tan-wrap .basic-del .basic-del-top ul li input {
-  width: 440px;
-  height: 35px;
-  margin-top: 14px;
-}
-.tan-wrap .basic-del .basic-del-bottom {
-  overflow: hidden;
-  margin-top: 38px;
-  border-top: 1px solid #eeeeee;
-}
-.tan-wrap .basic-del .basic-del-bottom input {
-  float: left;
-  width: 50%;
-  border: none;
-  background: none;
-  height: 50px;
-  outline: none;
-  border-left: #eeeeee solid 1px;
-}
-.tan-wrap .basic-del .basic-del-bottom input:first-of-type {
-  color: #1ea0e3;
 }
