--- a/view/css/weatherData.css
+++ b/view/css/weatherData.css
@@ -165,12 +165,15 @@ section .top1 input.seach {
   color: #ffffff;
   border: none;
   background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+  float: right;
 }
-section .top1 input.exportExcel {
+section .top2 input.exportExcel {
   border: 1px solid #d7d7d7;
   background: none;
   width: 65px;
   height: 30px;
+  margin: 20px;
+  margin-right: 0;
   float: right;
 }
 section .tables {
