--- a/view/css/wellCoverData.less
+++ b/view/css/wellCoverData.less
@@ -89,16 +89,23 @@ section {
         color: #ffffff;
         border: none;
         background: -webkit-linear-gradient(90deg, #1ea0e3, #32b5ee, #35bcf0);
+        float: right;
       }
+    }
+  }
+  .top2{
+    input{
       &.exportExcel {
         border: 1px solid #d7d7d7;
         background: none;
         width: 65px;
         height: 30px;
+        margin: 20px;
+        margin-right: 0;
         float: right;
       }
     }
-  }
+  } 
   .tables {
     overflow-x: auto;
     margin-top: 30px;
@@ -147,7 +154,6 @@ section {
       }
     }
     .tableContent {
-      // display: none;
       li {
         span {
           display: inline-block;
@@ -202,181 +208,6 @@ section {
             );
             color: #ffffff;
           }
-        }
-      }
-    }
-  }
-}
-.tan-wrap {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1111;
-  display: none;
-  background-color: rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  .basic-mod {
-    display: none;
-    position: absolute;
-    width: 500px;
-    height: 688px;
-    left: 50%;
-    top: 50%;
-    margin-left: -250px;
-    margin-top: -344px;
-    z-index: 11112;
-    background-color: #ffffff;
-    border-radius: 5px;
-    overflow: hidden;
-    .basic-mod-top {
-      padding: 30px;
-      p {
-        font-size: 14px;
-        color: #666666;
-        padding: 15px 0 15px 0px;
-        &.basic-mod-title {
-          font-size: 18px;
-          color: #333333;
-          text-align: left;
-          border-bottom: solid 1px #eeeeee;
-          padding: 0 0 30px 0;
-        }
-      }
-      select {
-        width: 100%;
-        height: 35px;
-        padding-left: 12px;
-        border: solid 1px #d7d7d7;
-      }
-      input {
-        width: 100%;
-        height: 35px;
-        padding-left: 12px;
-      }
-    }
-    .basic_mod_bottom {
-      overflow: hidden;
-      margin-top: 25px;
-      border-top: 1px solid #eeeeee;
-      input {
-        float: left;
-        width: 50%;
-        border: none;
-        background: none;
-        height: 50px;
-        outline: none;
-        border-left: #eeeeee solid 1px;
-        &:first-of-type {
-          color: #1ea0e3;
-        }
-      }
-    }
-  }
-  .basic-add {
-    display: none;
-    position: absolute;
-    width: 960px;
-    height: 522px;
-    left: 50%;
-    top: 50%;
-    margin-left: -480px;
-    margin-top: -261px;
-    z-index: 11112;
-    background-color: #ffffff;
-    .basic-add-top {
-      padding: 30px;
-      p {
-      }
-      ul {
-        width: 100%;
-        overflow: hidden;
-        li {
-          width: 50%;
-          float: left;
-          margin-top: 20px;
-          select {
-            margin-top: 14px;
-            width: 440px;
-            height: 35px;
-          }
-          input {
-            width: 440px;
-            height: 35px;
-            margin-top: 14px;
-          }
-        }
-      }
-    }
-    .basic-add-bottom {
-      overflow: hidden;
-      margin-top: 25px;
-      border-top: 1px solid #eeeeee;
-      input {
-        float: left;
-        width: 50%;
-        border: none;
-        background: none;
-        height: 50px;
-        outline: none;
-        border-left: #eeeeee solid 1px;
-        &:first-of-type {
-          color: #1ea0e3;
-        }
-      }
-    }
-  }
-  .basic-del {
-    display: none;
-    overflow: hidden;
-    box-shadow: 5px 5px 15px rgba(51, 51, 51, 0.2);
-    border-radius: 5px;
-    position: absolute;
-    width: 350px;
-    height: 170px;
-    left: 50%;
-    top: 50%;
-    margin-left: -175px;
-    margin-top: -85px;
-    z-index: 11112;
-    background-color: #ffffff;
-    .basic-del-top {
-      text-align: center;
-      padding: 60px;
-      padding-bottom: 0px;
-      ul {
-        width: 100%;
-        overflow: hidden;
-        li {
-          width: 50%;
-          float: left;
-          margin-top: 20px;
-          select {
-            margin-top: 14px;
-            width: 440px;
-            height: 35px;
-          }
-          input {
-            width: 440px;
-            height: 35px;
-            margin-top: 14px;
-          }
-        }
-      }
-    }
-    .basic-del-bottom {
-      overflow: hidden;
-      margin-top: 38px;
-      border-top: 1px solid #eeeeee;
-      input {
-        float: left;
-        width: 50%;
-        border: none;
-        background: none;
-        height: 50px;
-        outline: none;
-        border-left: #eeeeee solid 1px;
-        &:first-of-type {
-          color: #1ea0e3;
         }
       }
     }
